simplified sass file system

--- a/pages/index.html
+++ b/pages/index.html
@@ -8,13 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/changa-one" rel="stylesheet">
 
-    <link rel="stylesheet" href="../styles/base.css">
-    <link rel="stylesheet" href="../styles/task.css">
-    <link rel="stylesheet" href="../styles/main_page.css">
-    <link rel="stylesheet" href="../styles/task_del_alert.css">
-    <link rel="stylesheet" href="../styles/edit_task.css">
-    <link rel="stylesheet" href="../styles/share_task.css">
-
+    <link rel="stylesheet" href="../styles/main.css">
 
     <script async src="../scripts/create_task.js"></script>
     <script async src="../scripts/delete_task.js"></script>
