replaced onClick with addEventListener

--- a/pages/index.html
+++ b/pages/index.html
@@ -26,7 +26,7 @@
             <input class="create_tasks_input" id="title_tasks_input" type="text" placeholder="Title..."></input>
             <input class="create_tasks_input" id="body_tasks_input" type="text" placeholder="About..."></input>
         </div>
-        <button onclick="addTask()" class="add_button">+</button>
+        <button class="add_button">+</button>
     </div>
 
     <div id="tasks_list"></div>
